# pythonweb_hw7

./: academy.db  alembic.ini  connect_db.py  models.py  my_select.py  pyproject.toml  seeds.py
alembic/versions/: cc8f798e78b3_init.py
