[tool.poetry]
name = "pythonweb-hw7"
version = "0.1.0"
description = ""
authors = ["elena-kolos <anele.solok@gmail.com>"]
readme = "README.md"
packages = [{include = "pythonweb_hw7"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
